fix: add citation for generic ER characteristics

--- a/articles/er-evaluation-models/main.tex
+++ b/articles/er-evaluation-models/main.tex
@@ -96,9 +96,9 @@ T \kern-.1667em \lower.7ex \hbox{E} \kern-.125emX}}
 
     \section{Preliminaries}\label{sec:preliminaries}
 
-    The following characterstics of entity resolution tasks stand out
-    \textcolor{green}{e nevoie de o referinta si as incepe propozitia spunand ca asta e oarecum rezumatulu multor lucrari din literatura de specialitate}
-    :
+    In scientific literature, entity resolution has been attributed numerous
+    characteristics\cite{Tal11,Pap19}.
+    In the current context, the following stand out:
 
     \begin{itemize}
         \item\textit{A concern for a real-world entity}, for if the task were
