Split article content over multiple files

--- a/articles/er-evaluation-models/research-questions.tex
+++ b/articles/er-evaluation-models/research-questions.tex
@@ -27,9 +27,9 @@ do not have direct access to the entities they aim to resolve~\cite{Chen09}.
 Whenever we talk about measuring the performance of an entity resolution
 task, we must note that we are confined to the information that is available
 to the computer running the task.
-Because of the nature of the problem, we judge the quality of the entity
-resolution task's result in terms of the information that is available to us
-about the real-world entity we're trying to resolve.
+On the other hand, as humans we judge the quality of the entity resolution
+task's result in relation to the real-world information available to us, which
+usually includes the real-world object itself.
 This produces a gap between what a computer can provide and what the
 observer wishes to see.
 
@@ -38,17 +38,19 @@ nearing a century since it has become apparent that the observer is key in
 our physical universe~\cite{schrodinger1926}.
 Perhaps we can use Schrodinger's insight as inspiration for bridging our own
 gaps in understanding entity resolution quality.
-For instance, we might notice that there are multiple perspectives available
-to us when we judge the quality of an entity resolution outcome.
+For instance, we notice that there are multiple perspectives available to us
+when we judge the quality of an entity resolution outcome.
 We refer to these perspectives as theoretical models of entity resolution.
-Each model provides a way of understanding entity resolution tasks, without
-actually altering the way any of them are implemented in practice.
-Important questions emerge from the gap between the computer accessible
-information and the user's expectations of an entity resolution task.
+Each model provides a way of understanding entity resolution, without bearing on
+how any entity resolution solution is implemented in practice.
+Important questions emerge from the mere acknowledgement that theoretical models
+are perspectives on entity resolution in conjunction with the gap in knowledge
+between computer and human.
 Can evaluating the outcome of an entity resolution task from the viewpoint of a
-theoretical model yield an assessment of the task's own qualities?
-Are there invariant aspects in the assessment which remain consistent
-irrespective of the data on which the task operates?
+theoretical model be extrapolated into an assessment of the task's qualities?
+Are there invariant aspects present in the assessment of an entity resolution
+result which remain consistent irrespective of the data on which the task
+operates and of the type of task?
 
 Next, another gap exists between the generic solutions provided by scientific
 literature or programming libraries and the specific needs derived from a
